@@ -316,6 +316,8 @@
     <Compile Include="Registration\ComponentDescriptor.cs" />
     <Compile Include="Registration\ComponentInstanceDescriptor.cs" />
     <Compile Include="Registration\ComponentRegiatration.cs" />
+    <Compile Include="Registration\ParametersDescriptor.cs" />
+    <Compile Include="Registration\Parameter.cs" />
     <Compile Include="Registration\CustomDependencyDescriptor.cs" />
     <Compile Include="Registration\ExtendedPropertiesDescriptor.cs" />
     <Compile Include="Registration\IComponentRegistration.cs" />
